apps/nginx/NodePort-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    # Below Port number is a service port number
    - port: 80
      # Below targetPort number is a Container Port number
      targetPort: 80
